# drf_project

./: pyproject.toml
drf_project/: celery.py  settings.py  urls.py
education/: models.py  permissions.py  serliazers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_lesson.py  0003_remove_lesson_course.py  0004_alter_course_options_course_lessons_count.py  0005_alter_course_options_remove_course_lessons_count.py  0006_lesson_course.py  0007_alter_lesson_course_payments.py  0008_remove_payments_paid_course_or_lesson_and_more.py  0009_alter_payments_paid_course_and_more.py  0010_alter_payments_user.py  0011_course_owner_lesson_owner.py  0012_course_content_lesson_content.py  0013_coursesubscription.py  0014_payments_payment_intent_id.py  0015_remove_payments_payment_intent_id.py
users/: models.py  serliazers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_user_avatar_and_more.py
